--- a/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
+++ b/src/app/components/match-event/football-event/add-edit-football-event-table/add-edit-football-event-table.component.html
@@ -97,19 +97,21 @@
               @if (getEventQbFormControl(this.eventForm, this.arrayName, i); as control) {
                 <div class="event-table-cell" [style.background-color]="isMaxCautionColor(isQb(eventsArray, i))">
                   @if (getEventTeam(eventsArray, i); as selectedTeam) {
-                    @if (isMobile) {
-                      <app-select-player-in-match
-                        [placeholder]="'qb'"
-                        [players]="getPlayersForSelectedTeam(selectedTeam)"
-                        [control]="control"
-                      ></app-select-player-in-match>
-                    } @else {
-                      <app-search-player-in-match-autocomplete
-                        [action]="'select'"
-                        [placeholder]="'qb'"
-                        [players]="getPlayersForSelectedTeam(selectedTeam)"
-                        [control]="control">
-                      </app-search-player-in-match-autocomplete>
+                    @if (!isKickOffPlay(eventsArray, i)) {
+                      @if (isMobile) {
+                        <app-select-player-in-match
+                          [placeholder]="'qb'"
+                          [players]="getPlayersForSelectedTeam(selectedTeam)"
+                          [control]="control"
+                        ></app-select-player-in-match>
+                      } @else {
+                        <app-search-player-in-match-autocomplete
+                          [action]="'select'"
+                          [placeholder]="'qb'"
+                          [players]="getPlayersForSelectedTeam(selectedTeam)"
+                          [control]="control">
+                        </app-search-player-in-match-autocomplete>
+                      }
                     }
                   }
                 </div>
