production dockerfile build for kuber

--- a/src/app/pagenotfound/page-not-found.component.html
+++ b/src/app/pagenotfound/page-not-found.component.html
@@ -1,6 +1,6 @@
 <div class="tui-container_adaptive">
   <tui-block-status>
     <h3 class="tui-text_h3">PAGE {{errorStatusText | uppercase}}</h3>
-    <h4 class="tui-text_h4">ERROR: {{errorStatus}}</h4>
+    <h4 class="tui-text_h4">ERROR: {{errorStatus}} ups</h4>
   </tui-block-status>
 </div>
