--- a/src/app/shared/ui/buttons/admin-down-button/admin-down-button.component.html
+++ b/src/app/shared/ui/buttons/admin-down-button/admin-down-button.component.html
@@ -1,9 +1,10 @@
 <button
-  appearance="down-admin"
+  appearance="outline-grayscale"
   tuiButton
   [size]="size"
   type="button"
   style="width: 100%"
   [disabled]="disabled"
->{{ down }} {{ distance }}
+>
+  {{ down }} {{ distance }}
 </button>
