buttons appearece changed after tui update

--- a/src/app/shared/ui/buttons/admin-submit-button/admin-submit-button.component.html
+++ b/src/app/shared/ui/buttons/admin-submit-button/admin-submit-button.component.html
@@ -1,9 +1,10 @@
 <button
-  appearance="submit-admin"
+  appearance="primary"
   tuiButton
   size="s"
   type="button"
   style="width: 100%"
   [disabled]="disabled"
->{{ action | titlecase }}
+>
+  {{ action | titlecase }}
 </button>
