--- a/src/app/shared/ui/buttons/admin-timeout-button/admin-timeout-button.component.html
+++ b/src/app/shared/ui/buttons/admin-timeout-button/admin-timeout-button.component.html
@@ -1,9 +1,10 @@
 <button
-  appearance="down-admin"
+  appearance="outline-grayscale"
   tuiButton
   size="m"
   type="button"
   style="width: 100%"
   [disabled]="disabled"
->{{ timeouts }}
+>
+  {{ timeouts }}
 </button>
