--- a/src/app/components/tournament/island-list-of-tournaments/island-list-of-tournaments.component.html
+++ b/src/app/components/tournament/island-list-of-tournaments/island-list-of-tournaments.component.html
@@ -1,46 +1,68 @@
-<div class="list-of-items-with-data">
-  @for (item of data; track item.id) {
-    <div class="item-with-data-island">
-      <a
-        rel="noreferrer"
-        [size]="_size"
-        target="_self"
-        tuiIsland
-        textAlign="center"
-        [hoverable]="hoverable"
-        (click)="navigateToTournamentItem(item)"
-      >
-        <div class="tui-island__content">
-          <figure class="tui-island__figure">
-            <div class="some-figure">
-              <div class="some-figure">
-                @if (avatarUrl == "title" || avatarUrl) {
-                  <tui-avatar
-                    [src]="
-                      backendUrl + (item[avatarUrl] || '')
-                        | tuiFallbackSrc: getInitialsText(item)
-                    "
-                    size="xl"
-                    class="tui-space_top-1"
-                  ></tui-avatar>
-                }
-              </div>
-            </div>
-          </figure>
-          <div>
-            <h3 class="tui-island__title">
-              {{ getTitleCase(item, titleProperty) | uppercase }}
-            </h3>
-            <p class="tui-island__paragraph">
-              @if (item[paragraphProperty]) {
-                {{ item[paragraphProperty] }}
-              } @else {}
-            </p>
-          </div>
-        </div>
-      </a>
+@for (item of data; track item.id) {
+  <div tuiPlatform="web">
+    <div tuiAppearance="floating" tuiCardLarge>
+      <header tuiHeader>
+        <h1 tuiTitle>
+          Title
+          <span tuiSubtitle>Subtitle</span>
+        </h1>
+
+        <aside tuiAccessories>
+          <tui-avatar appearance="primary" [src]="url + item[avatarUrl]" />
+        </aside>
+      </header>
+
+      <footer>
+        <button appearance="secondary" size="m" tuiButton type="button">
+          Label
+        </button>
+      </footer>
     </div>
-  } @empty {
-    No Items Found
-  }
-</div>
+  </div>
+}
+<!-- <div class="list-of-items-with-data"> -->
+<!--   @for (item of data; track item.id) { -->
+<!--       <div class="item-with-data-island"> -->
+<!-- <a -->
+<!--   rel="noreferrer" -->
+<!--   [size]="_size" -->
+<!--   target="_self" -->
+<!--   tuiIsland -->
+<!--   textAlign="center" -->
+<!--   [hoverable]="hoverable" -->
+<!--   (click)="navigateToTournamentItem(item)" -->
+<!-- > -->
+<!--   <div class="tui-island__content"> -->
+<!--     <figure class="tui-island__figure"> -->
+<!--       <div class="some-figure"> -->
+<!--         <div class="some-figure"> -->
+<!--           @if (avatarUrl == "title" || avatarUrl) { -->
+<!--             <tui-avatar -->
+<!--               [src]=" -->
+<!--                 backendUrl + (item[avatarUrl] || '') -->
+<!--                   | tuiFallbackSrc: getInitialsText(item) -->
+<!--               " -->
+<!--               size="xl" -->
+<!--               class="tui-space_top-1" -->
+<!--             ></tui-avatar> -->
+<!--           } -->
+<!--         </div> -->
+<!--       </div> -->
+<!--     </figure> -->
+<!--     <div> -->
+<!--       <h3 class="tui-island__title"> -->
+<!--         {{ getTitleCase(item, titleProperty) | uppercase }} -->
+<!--       </h3> -->
+<!--       <p class="tui-island__paragraph"> -->
+<!--         @if (item[paragraphProperty]) { -->
+<!--           {{ item[paragraphProperty] }} -->
+<!--         } @else {} -->
+<!--       </p> -->
+<!--     </div> -->
+<!--   </div> -->
+<!-- </a> -->
+<!-- </div> -->
+@empty {
+  No Items Found
+}
+<!-- </div> -->
