aside used in tui very much

--- a/src/styles.less
+++ b/src/styles.less
@@ -64,23 +64,23 @@ tui-root {
   font-size: 20px;
 }
 
-aside {
-  display: flex;
-  //padding: 20px;
-  flex-direction: column;
-  //justify-content: stretch;
-  //align-items: stretch;
-  align-content: space-evenly;
-  //background-color:  var(--tui-background-accent-opposite);
-  //min-height: 100%;
-  min-width: 100%;
-  //color: var(--tui-background-base-alt);
-}
-
-aside > * {
-  margin-bottom: 20px;
-  // gap between objects in aside
-}
+// aside {
+//   display: flex;
+//   //padding: 20px;
+//   flex-direction: column;
+//   //justify-content: stretch;
+//   //align-items: stretch;
+//   align-content: space-evenly;
+//   //background-color:  var(--tui-background-accent-opposite);
+//   //min-height: 100%;
+//   min-width: 100%;
+//   //color: var(--tui-background-base-alt);
+// }
+//
+// aside > * {
+//   margin-bottom: 20px;
+//   // gap between objects in aside
+// }
 
 .container {
   //height: 100%;
